--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,16 +13,19 @@ source:
   '{{ hash_type }}': '{{ hash_value }}'
 
 build:
-  number: 1
+  number: 1000
   script: python setup.py install --offline --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
+    - {{ compiler('c') }}
+  host:
     - python
+    - numpy
     - setuptools
-    - astropy
   run:
     - python
+    - {{ pin_compatible('numpy') }}
     - astropy
     - astropy-healpix
 
