--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -7,4 +7,4 @@ max_py_ver: '37'
 max_r_ver: '35'
 provider:
   win: azure
-conda_forge_output_validation: false
+conda_forge_output_validation: true
