--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,12 +21,12 @@ requirements:
     - numpy                                  # [build_platform != target_platform]
     - {{ compiler('c') }}
   host:
-    - python >=3.6
+    - python
     - numpy
     - setuptools_scm
     - pip
   run:
-    - python >=3.6
+    - python
     - {{ pin_compatible('numpy') }}
     - astropy >=3.2
     - matplotlib
