--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,26 +13,33 @@ source:
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . -vv
+  skip: true  # [py<37]
 
 requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - cython                                 # [build_platform != target_platform]
     - numpy                                  # [build_platform != target_platform]
     - {{ compiler('c') }}
   host:
     - python
-    - numpy
-    - cython =0.29.22
-    - extension-helpers
-    - setuptools_scm
     - pip
+    - setuptools
+    - setuptools_scm
+    - cython >=0.29.22
+    - extension-helpers
+    - numpy 1.16.*  # [py<39 and build_platform == target_platform and python_impl == 'cpython']
+    - numpy  # [py>=39 or build_platform != target_platform or python_impl == 'pypy']
+    - astropy >=3.2
   run:
     - python
     - {{ pin_compatible('numpy') }}
+    - numpy >=1.16
     - astropy >=3.2
-    - matplotlib
-    - shapely
+    - matplotlib-base >=2.0
+    - pytest-astropy >=0.4
+    - pytest-arraydiff >=0.3
 
 test:
   imports:
@@ -46,16 +53,16 @@ about:
   license: BSD-3-Clause
   license_file: LICENSE.rst
   license_family: BSD
-  summary: Astropy affilated package for region handling
+  summary: Astropy coordinated package for region handling
   description: |
-    This is an in-development package for region handling based on Astropy.
-    The goal is to merge the functionality from pyregion and photutils
-    apertures and then after some time propose this package for inclusion in
-    the Astropy core.
+    Regions is an in-development package for region handling based on
+    Astropy. The eventual goal is to merge this package into the Astropy
+    core package.
   doc_url: https://astropy-regions.readthedocs.io
   dev_url: https://github.com/astropy/regions
 
 extra:
   recipe-maintainers:
+    - larrybradley
     - mwcraig
     - bsipocz
